@@ -4,6 +4,8 @@ PHP                                                                        NEWS
 - Fixed bug #35293 (PDO segfaults when using persistent connections). (Tony)
 - Fixed bug #35278 (Multiple virtual() calls crash Apache 2 php module). (Ilia)
 - Fixed bug #35273 (Error in mapping soap - java types). (Dmitry)
+- Fixed bug #35243 (php_mblen() crashes when compiled with thread-safety
+  on Linux). (Patch: shulmanb at il dot ibm dot com, Jani)
 - Fixed bug #33153 (crash in mssql_next result). (Frank)
 - Fixed bug #33963 (mssql_bind() fails on input parameters). (Frank)
 - Fixed bug #33201 (Crash when fetching some data types). (Frank)
